@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-06-28T08:21:05Z",
+  "timestamp" : "2022-06-28T16:22:50Z",
   "count_outdated" : 357,
   "uniques_outdated" : 204,
   "count" : 383,
-  "uniques" : 222,
+  "uniques" : 221,
   "clones" : [
     {
       "timestamp": "2022-06-14T00:00:00Z",
-      "count": 4,
+      "count": 3,
       "count_minmax": [ 1, 5 ],
-      "uniques": 3,
+      "uniques": 2,
       "uniques_minmax": [ 1, 3 ]
     },
     {
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-06-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
