@@ -1,3 +1,10 @@
+2022-06-28T16:22:50Z:
+* notice: last 14d: unq all: 4 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 204 357 / 222 383
+* notice: next accum: outdated-unq outdated-all / unq all: 204 357 / 221 383
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -1 -1 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-06-14 2022-06-28]
+
 2022-06-28T08:21:05Z:
 * notice: last 14d: unq all: 5 26
 * notice: prev accum: outdated-unq outdated-all / unq all: 204 357 / 221 383
